--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = raspberrypi
 board = pico
 framework = arduino
 board_build.f_cpu = 120000000L
+monitor_speed = 115200
 
 [env:native]
 platform = native
