using pico-sdk as submodule. removed pico_extras from cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.12)
 
-include(pico_sdk_import.cmake)
-include(pico_extras_import.cmake)
+include(lib/extern/pico-sdk/pico_sdk_init.cmake)
+
+# include(pico_sdk_import.cmake)
+# include(pico_extras_import.cmake)
 
 project(dshot_test LANGUAGES C CXX ASM)
 
